# ews-client

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package.json
.github/workflows/: release.yaml  test.yaml
ews-client/: Cargo.toml
ews-client/src/: client.rs  constants.rs  email.rs  http.rs
ews-client/src/types/: pox.rs  protocol.rs
ews-types/: Cargo.toml
ews-types/schemas/autodiscover/: messages.xsd
ews-types/schemas/ews/: messages.xsd  types.xsd
ews-types/src/: lib.rs
ews-types/src/schemas/: mod.rs
ews-types/src/schemas/autodiscover/: generated.rs
ews-types/src/schemas/ews/: generated.rs  mod.rs
src/: candidate.rs  client.rs  dns.rs  email.rs  error.rs  http.rs  ldap.rs  lib.rs
src/config/: mod.rs  pox.rs
src/types/: candidate.rs  mod.rs  pox.rs  protocol.rs  request.rs  response.rs
