[package]
name = "ms-autodiscover"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

rust-version = "1.67"
description = "An implementation of the Microsoft autodiscover protocol for Exchange"
license = "MIT"

[dependencies]
async-recursion = "1.0.4"
bytes = "1.4.0"
derive-getters = "0.3.0"
futures = "0.3.28"
ldap3 = "0.11.3"
log = "0.4.19"
reqwest = "0.11.18"
serde = {version = "1.0.183", features = ["derive"] }
serde-xml-rs = "0.6.0"
trust-dns-resolver = "0.22.0"
validator = { version = "0.16" }

[dev-dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
tokio = { version = "1.0", features = ["full"] }
